GitVersion1/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uf__Activity_Needed__c</fullName>
        <formula>IMAGE( 
CASE( Rating, 
&quot;Hot&quot;, IF(AND(uf__Days_Since_Activity__c &gt;=3,NOT(ISPICKVAL(Status,&quot;Unqualified&quot;)), NOT(ISPICKVAL(Status,&quot;Unqualified-Spammable&quot;))), &quot;/img/samples/flag_red.gif&quot;, &quot;/s.gif&quot;), 

&quot;Warm&quot;, IF( 

OR(AND(OR(uf__Est_Project_Amount__c &gt;=1000,ISNULL(uf__Est_Project_Amount__c )),uf__Days_Since_Activity__c &gt;=3,NOT(ISPICKVAL(Status,&quot;Unqualified&quot;)), NOT(ISPICKVAL(Status,&quot;Unqualified-Spammable&quot;))) 
,ISNULL(uf__Days_Since_Activity__c)) 
, 

&quot;/img/samples/flag_red.gif&quot;, 

IF( AND(OR(uf__Est_Project_Amount__c &lt;1000,ISNULL(uf__Est_Project_Amount__c )),uf__Days_Since_Activity__c &gt;=5, NOT(ISPICKVAL(Status,&quot;Unqualified&quot;)), NOT(ISPICKVAL(Status,&quot;Unqualified-Spammable&quot;))), 

&quot;/img/samples/flag_yellow.gif&quot;, 

&quot;/s.gif&quot;)), 

&quot;Cold&quot;, IF(ISNULL(uf__Days_Since_Activity__c),&quot;/img/samples/flag_red.gif&quot;, &quot;/s.gif&quot;), 
&quot;&quot;, IF(ISNULL(uf__Days_Since_Activity__c),&quot;/img/samples/flag_red.gif&quot;, &quot;/s.gif&quot;), 

&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
        <inlineHelpText>Does this Lead need to be contacted?  Based on a combination of activity history, qualifications, rating, and project estimate.</inlineHelpText>
        <label>Activity Needed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uf__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uf__Days_Since_Activity__c</fullName>
        <formula>TODAY() - LastActivityDate</formula>
        <label>Days Since Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uf__Days_Since_Created__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <label>Days Since Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uf__Est_Project_Amount__c</fullName>
        <inlineHelpText>Provide an early &quot;guesstimate&quot; as to how much this project could potentially yield based on product interest.  Provide a rough order of magnitude +-25% accuracy.</inlineHelpText>
        <label>Est. Project Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>uf__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uf__Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>uf__Problem_Status_Next_Steps__c</fullName>
        <inlineHelpText>Enter short 1 sentence description of what to do next with this Lead.</inlineHelpText>
        <label>Problem/Status/Next Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uf__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>uf__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>